@@ -495,6 +495,92 @@ int *ObjectMoleculeGetPrioritizedOtherIndexList(ObjectMolecule *I,CoordSet *cs)
   return result;
 }
 
+int ObjectMoleculeGetNearestBlendedColor(ObjectMolecule *I, float *point, float cutoff, int state, float *dist, float *color)
+{
+  int result = -1;
+  float tot_weight = 0.0F;
+  float cutoff2 = cutoff * cutoff;
+
+  color[0] = 0.0F;
+  color[1] = 0.0F;
+  color[2] = 0.0F;
+
+  register float nearest = -1.0F;
+  if(state<0)
+    state = ObjectGetCurrentState(&I->Obj,true);
+  
+  if((state>=0)&&(state<I->NCSet)) {
+    CoordSet *cs = I->CSet[state];
+    if(cs) {
+      MapType *map;
+      CoordSetUpdateCoord2IdxMap(cs, cutoff);
+      nearest = cutoff2;
+      if( (map = cs->Coord2Idx)) {
+        int a,b,c,d,e,f,j;
+        register float test;
+        register float *v;
+        MapLocus(map,point,&a,&b,&c);
+        for(d=a-1;d<=a+1;d++)
+          for(e=b-1;e<=b+1;e++)
+            for(f=c-1;f<=c+1;f++) {
+              j = *(MapFirst(map,d,e,f));
+              while(j>=0) {
+                v = cs->Coord + (3*j);                    
+                test = diffsq3f(v,point);
+                if(test<cutoff2) {
+                  float weight = cutoff - sqrt1f(test); 
+                  float *at_col = ColorGet(I->Obj.G,I->AtomInfo[cs->IdxToAtm[j]].color);
+                  color[0] += at_col[0] * weight;
+                  color[1] += at_col[1] * weight;
+                  color[2] += at_col[2] * weight;
+                  tot_weight += weight;
+                }
+                if(test<=nearest) {
+                  result = j;
+                  nearest = test;
+                }
+                j=MapNext(map,j);
+              }
+            }
+      } else {
+        register int j;
+        register float test,*v=cs->Coord;
+        for(j=0;j<cs->NIndex;j++) {
+          test = diffsq3f(v,point);
+          if(test<cutoff2) {
+            float weight = cutoff - sqrt1f(test); 
+            float *color = ColorGet(I->Obj.G,I->AtomInfo[cs->IdxToAtm[j]].color);
+            color[0] += color[0] * weight;
+            color[1] += color[1] * weight;
+            color[2] += color[2] * weight;
+            tot_weight += weight;
+          }
+          if(test<=nearest) {
+            result = j;
+            nearest = test;
+          }
+          v+=3;
+        }
+      }
+      if(result>=0)
+        result = cs->IdxToAtm[result];
+    }
+  }
+  if(dist) {
+    if(result>=0) {
+      *dist = sqrt1f(nearest);
+      if(tot_weight>0.0F) {
+        color[0] /= tot_weight;
+        color[1] /= tot_weight;
+        color[2] /= tot_weight;
+      }
+    } else {
+      *dist = -1.0F;
+    }
+  }
+  return result;
+}
+
 int ObjectMoleculeGetNearestAtomIndex(ObjectMolecule *I, float *point, float cutoff, int state, float *dist)
 {
   int result = -1;
@@ -514,20 +600,18 @@ int ObjectMoleculeGetNearestAtomIndex(ObjectMolecule *I, float *point, float cut
         MapLocus(map,point,&a,&b,&c);
         for(d=a-1;d<=a+1;d++)
           for(e=b-1;e<=b+1;e++)
-            for(f=c-1;f<=c+1;f++)
-              {
+            for(f=c-1;f<=c+1;f++) {
                 j = *(MapFirst(map,d,e,f));
-                while(j>=0)
-                  {
-                    v = cs->Coord + (3*j);                    
-                    test = diffsq3f(v,point);
-                    if(test<=nearest) {
-                      result = j;
-                      nearest = test;
-                    }
-                    j=MapNext(map,j);
+                while(j>=0) {
+                  v = cs->Coord + (3*j);                    
+                  test = diffsq3f(v,point);
+                  if(test<=nearest) {
+                    result = j;
+                    nearest = test;
                   }
-              }
+                  j=MapNext(map,j);
+                }
+            }
       } else {
         register int j;
         register float test,*v=cs->Coord;
