@@ -715,6 +715,7 @@ typedef struct _CPyMOL {
   ov_word lex_ellipsoid_quality;
   ov_word lex_cgo_ellipsoid_quality;
   ov_word lex_movie_animate_by_frame;
+  ov_word lex_ramp_blend_nearby_colors;
 
 } _CPyMOL;
 
@@ -1438,6 +1439,7 @@ static OVstatus PyMOL_InitAPI(CPyMOL *I)
   LEX_SETTING(ellipsoid_quality, 563);
   LEX_SETTING(cgo_ellipsoid_quality, 564);
   LEX_SETTING(movie_animate_by_frame, 565);
+  LEX_SETTING(ramp_blend_nearby_colors, 566);
 
  return_OVstatus_SUCCESS;
 }
